2021-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.28

2021-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/sha1.Rmd (date): Remove knitr date calculation in YAML
	header which GitHub does not like and mistakes for Jekyll code
	* docs/mkdmt-src/src/vignette.md (date): Idem

	* README.md: Add total download badge, label other as monthly

2021-09-22  András Svraka  <svraka.andras@gmail.com>

	* R/vdigest.R (non_streaming_digest): Ensure UTF-8 encoded file paths
	on Windows
	* inst/tinytest/test_encoding.R: Expand test coverage for path name
	encodings on Windows

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2021-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add link to repo

2021-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* docs-src/mkdocs.yml (theme): Add (draft, incomplete) vignette
	* docs-src/src/vignette.md (title): Idem

2021-03-22  Floris Vanderhaeghe  <floris.vanderhaeghe@inbo.be>

	* man/digest.Rd: Reworded to also highlight file mode

2021-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/SpookyV2.cpp: Disallow unaligned reads which have been seen to
	trigger SAN issues as reported by Winston in #167

2020-12-23  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.27

2020-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/blake3_dispatch.c: Comment-out include of intrinsics to also
	comment-out erroring on insufficient architectures such as Solaris

2020-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.26
